<resources>
    <string name="app_name">NicolasExamenFinalPMDMO</string>
    <string name="lblEmptyViewText">No hay libros.</string>
    <string name="tilHintTitulo">Titulo</string>
    <string name="tilHintAutor">Autor/a</string>
    <string name="tilHintFecha">Año de publicación</string>
    <string name="tilHintURL">URL Portada</string>
    <string name="tilSinopsis">Sinopsis</string>
    <string name="mnuItem1_Title">Settings</string>
</resources>
